# portifole

./: Pagina_inicial.py  clientes.csv  pyproject.toml
page/: 1_📝Cadastro.py  3_📊Financeiro.py
pages/: 2_🔍Consulta.py  4_🧾Gerar.py
